--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,12 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22",
+    "tsx": "^3.12.6",
     "typescript": "^5.0.3"
   },
   "scripts": {
+    "dev": "tsx watch src/app.ts",
     "build": "npx tsc",
-    "start": "node dist/app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "start": "node dist/app.js"
   }
 }
