knex setup and db migration boiler

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\""
+    "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
+    "migrate": "knex migrate:latest --knexfile server/src/db/knexfile.js"
   },
   "keywords": [],
   "author": "",
