--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.6",
     "typescript": "^5.0.3"
   },
