--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "styled-components": "^5.3.9",
     "swr": "^2.1.2",
     "typescript": "5.0.3"
