update controllers to use new error utils

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "arrowParens": "avoid",
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "printWidth": 125
 }
