--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.315.0",
+    "@aws-sdk/types": "^3.310.0",
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -7,11 +9,14 @@
     "knex": "^2.4.2",
     "node-fetch": "^3.3.1",
     "pg": "^8.10.0",
-    "recipe-data-scraper": "^1.4.1"
+    "recipe-data-scraper": "^1.4.1",
+    "request": "^2.88.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.6",
     "typescript": "^5.0.3"
