--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "concurrently": "^8.0.1",
@@ -25,6 +26,7 @@
     "npm": "^9.6.4"
   },
   "dependencies": {
-    "babel-preset-next": "^1.4.0"
+    "babel-preset-next": "^1.4.0",
+    "uuid": "^9.0.0"
   }
 }
