--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,11 @@
     "node-fetch": "^3.3.1",
     "pg": "^8.10.0",
     "recipe-data-scraper": "^1.4.1",
-    "request": "^2.88.2",
-    "uuid": "^9.0.0"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "@types/uuid": "^9.0.1",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.6",
     "typescript": "^5.0.3"
