--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,10 @@ DEV_DB_USER=
 DATABASE=cookbooks
 SERVER_PORT=8080
 
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+RECIPE_IMAGES_BUCKET=
+RECIPE_IMAGES_BUCKET_LINK=
+
 # DEBUG=knex:*
