--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "sharp": "^0.32.1",
     "styled-components": "^5.3.9",
     "swr": "^2.1.2",
     "typescript": "5.0.3"
