--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "eslint": "^8.37.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "i": "^0.3.7",
-    "npm": "^9.6.4"
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "babel-preset-next": "^1.4.0",
+    "sharp": "^0.32.1",
     "uuid": "^9.0.0"
   }
 }
