--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "node-fetch": "^3.3.1",
     "pg": "^8.10.0",
-    "recipe-data-scraper": "^1.4.1",
-    "request": "^2.88.2"
+    "plaiceholder": "^2.5.0",
+    "recipe-data-scraper": "^1.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
