--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "iso8601-duration": "^2.1.1",
     "knex": "^2.4.2",
     "microdata-node": "^2.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.10.0",
     "plaiceholder": "^2.5.0",
     "recipe-data-scraper": "^1.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.6",
