add db configurations, ssl, staging script

--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,25 @@
 NEXT_PUBLIC_DEV_API=http://localhost:8080/v1
+NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=https://cookbooks0347.s3.us-west-2.amazonaws.com
 
-DEV_DB_PASS=
-DEV_DB_USER=
-DATABASE=cookbooks
+DEV_DB=cookbooks
+DEV_DB_HOST=127.0.0.1
+DEV_DB_PASS= # Your local psql password
+DEV_DB_USER= # Your local psql user
+
+BASTION_PORT=3002
+
+PROD_DB=Cookbooks
+PROD_DB_HOST=cookbooks-db.ckdmrx07o5xj.us-west-2.rds.amazonaws.com
+PROD_DB_PORT=5432
+PROD_DB_USER= # Obtain
+PROD_DB_PASS= # Obtain
+
 SERVER_PORT=8080
 
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-RECIPE_IMAGES_BUCKET=
-RECIPE_IMAGES_BUCKET_LINK=
+AWS_REGION=us-west-2
+AWS_ACCESS_KEY_ID= # Your access key
+AWS_SECRET_ACCESS_KEY= # Your secret key
+RECIPE_IMAGES_BUCKET=cookbooks0347
+
 
 # DEBUG=knex:*
