--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "NODE_ENV=development node server.js",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -25,5 +26,8 @@
     "styled-components": "^5.3.9",
     "swr": "^2.1.2",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.3"
   }
 }
