--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
+    "@types/express": "^4.17.17",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -29,6 +30,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "babel-preset-next": "^1.4.0",
+    "express": "^4.18.2",
     "sharp": "^0.32.1",
     "uuid": "^9.0.0"
   }
