--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development node server.js",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,7 +17,6 @@
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -28,6 +27,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.1.3"
+    "babel-plugin-styled-components": "^2.1.3",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
