--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cookbooks",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development node server.js",
@@ -14,14 +14,17 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "sharp": "^0.32.1",
     "styled-components": "^5.3.9",
     "swr": "^2.1.2",
     "typescript": "5.0.3"
