--- a/package.json
+++ b/package.json
@@ -17,21 +17,17 @@
   "license": "ISC",
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
-    "@types/express": "^4.17.17",
-    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "concurrently": "^8.0.1",
     "eslint": "^8.37.0",
+    "eslint-config-next": "^13.4.3",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "babel-preset-next": "^1.4.0",
-    "express": "^4.18.2",
-    "sharp": "^0.32.1",
-    "uuid": "^9.0.0"
+    "babel-preset-next": "^1.4.0"
   }
 }
