--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
     "@aws-sdk/client-s3": "^3.315.0",
     "@aws-sdk/types": "^3.310.0",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.1",
+    "axios": "^1.4.0",
     "cheerio": "1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "helmet": "^7.0.0",
     "iso8601-duration": "^2.1.1",
     "knex": "^2.4.2",
@@ -13,7 +17,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.10.0",
     "plaiceholder": "^2.5.0",
-    "recipe-data-scraper": "^1.4.1"
+    "recipe-data-scraper": "^1.4.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/morgan": "^1.9.4",
