--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ DEV_DB_PASS= # Your local psql password
 DEV_DB_USER= # Your local psql user
 
 BASTION_PORT=3002
+SERVER_PORT=8080
 
 PROD_DB=Cookbooks
 PROD_DB_HOST=cookbooks-db.ckdmrx07o5xj.us-west-2.rds.amazonaws.com
@@ -14,11 +15,10 @@ PROD_DB_PORT=5432
 PROD_DB_USER= # Obtain
 PROD_DB_PASS= # Obtain
 
-SERVER_PORT=8080
-
 AWS_REGION=us-west-2
 AWS_ACCESS_KEY_ID= # Your access key
 AWS_SECRET_ACCESS_KEY= # Your secret key
+DOCKER_REGISTRY=576765093341.dkr.ecr.us-west-2.amazonaws.com/cookbooks
 RECIPE_IMAGES_BUCKET=cookbooks0347
 
 
