--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_DEV_API=http://localhost:8080/v1
+NEXT_PUBLIC_PROD_API=http://cookbooks.service.local:8080
 NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=https://cookbooks0347.s3.us-west-2.amazonaws.com
+AUTH0_BASE_URL_PROD=https://cook-books.io/
 
 DEV_DB=cookbooks
 DEV_DB_HOST=127.0.0.1
