--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       - NEXT_PUBLIC_DEV_API=${NEXT_PUBLIC_DEV_API}
       - NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=${NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK}
+      - AUTH0_BASE_URL=${AUTH0_BASE_URL}
       - NODE_ENV=production
     ports:
       - "3000:3000"
