final prod tweaks

--- a/.env.sample
+++ b/.env.sample
@@ -1,27 +1,30 @@
 NEXT_PUBLIC_DEV_API=http://localhost:8080/v1
-NEXT_PUBLIC_PROD_API=http://cookbooks.service.local:8080
-NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=https://cookbooks0347.s3.us-west-2.amazonaws.com
+NEXT_PUBLIC_PROD_API=http://cookbooks.service.local:8080/v1
+NEXT_PUBLIC_DEV_PROXY=http://127.0.0.1:3000/api/proxy
+NEXT_PUBLIC_PROD_PROXY=https://cook-books.io/api/proxy
 AUTH0_BASE_URL_PROD=https://cook-books.io/
+AUTH0_BASE_URL=http://localhost:3000
 
-DEV_DB=cookbooks
-DEV_DB_HOST=127.0.0.1
-DEV_DB_PASS= # Your local psql password
-DEV_DB_USER= # Your local psql user
+RECIPE_IMAGES_BUCKET=cookbooks0347
+NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=https://cookbooks0347.s3.us-west-2.amazonaws.com
 
 BASTION_PORT=3002
 SERVER_PORT=8080
 
-PROD_DB=Cookbooks
-PROD_DB_HOST=cookbooks-db.ckdmrx07o5xj.us-west-2.rds.amazonaws.com
-PROD_DB_PORT=5432
+DB=dbCookbooks
+DB_PORT=5432
+
+DEV_DB_HOST=127.0.0.1
+DEV_DB_PASS= # Your local psql password
+DEV_DB_USER= # Your local psql user
+
+PROD_DB_HOST=ls-2eb1eb845876e7f4117a840bcc419fc972f2081d.cmb7vlrfqzjw.us-west-2.rds.amazonaws.com
 PROD_DB_USER= # Obtain
 PROD_DB_PASS= # Obtain
 
 AWS_REGION=us-west-2
 AWS_ACCESS_KEY_ID= # Your access key
 AWS_SECRET_ACCESS_KEY= # Your secret key
-DOCKER_REGISTRY=576765093341.dkr.ecr.us-west-2.amazonaws.com/cookbooks
-RECIPE_IMAGES_BUCKET=cookbooks0347
-
+DOCKER_REGISTRY=576765093341.dkr.ecr.us-west-2.amazonaws.com/cookbooks/prod
 
 # DEBUG=knex:*
