--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,12 @@ services:
     build: client/
     restart: always
     environment:
-      - NEXT_PUBLIC_DEV_API=${NEXT_PUBLIC_DEV_API}
-      - NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=${NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK}
-      - AUTH0_BASE_URL=${AUTH0_BASE_URL}
+      - NEXT_PUBLIC_PROD_API=${NEXT_PUBLIC_PROD_API}
       - NEXT_PUBLIC_PROD_PROXY=${NEXT_PUBLIC_PROD_PROXY}
+      - AUTH0_BASE_URL=https://cook-books.io/
+      - NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=${NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK}
       - NEXT_PUBLIC_APP_ENV=production
+      - APP_ENV=production
     ports:
       - '3000:3000'
       - '443:443'
