--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,8 @@ phases:
   pre_build:
     commands:
       - echo "Loogging into ecr"
+      - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 576765093341.dkr.ecr.us-west-2.amazonaws.com
   build:
     commands:
