--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Installing docker"
+      - echo "Installing docker..."
       - curl -L -o docker-linux-amd64.tar.gz https://github.com/docker/compose-cli/releases/download/v1.0.10/docker-linux-amd64.tar.gz
       - tar xzf docker-linux-amd64.tar.gz
       - chmod +x docker/docker
@@ -13,10 +13,12 @@ phases:
       - ln -s $(which docker) /usr/local/bin/com.docker.cli
   pre_build:
     commands:
-      - echo "Loogging into ecr"
+      - echo "Loogging into ECR..."
       - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
       - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 576765093341.dkr.ecr.us-west-2.amazonaws.com
+      - echo "Logging into Docker Hub..."
+      - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
   build:
     commands:
       - echo "Building containers"
