--- a/deployspec.yml
+++ b/deployspec.yml
@@ -1,13 +1,57 @@
 version: 0.2
-  phases:
-    pre_build:
-      commands:
-        - echo "Deploying containers to lightsail..."
-    build:
-      commands:
-        - aws lightsail create-container-service-deployment --service-name cookbooks
-          --containers file://containerspec.json
-          --public-endpoint containerName=cookbooks-prod-client,containerPort=3000
-      on-failure: ABORT
-    post_build:
+
+phases:
+  pre_build:
+    commands:
+      - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+  build:
+    commands:
+      - echo "Deploying containers to lightsail..."
+      - |
+        aws lightsail create-container-service-deployment --service-name cookbooks --containers '{
+            "cookbooks-prod-server": {
+              "image": "576765093341.dkr.ecr.us-west-2.amazonaws.com/cookbooks/prod/server",
+              "ports": {
+                "8080": "HTTP"
+              },
+              "environment": {
+                "DB": "'"$DB"'",
+                "DB_PORT": "'"$DB_PORT"'",
+                "PROD_DB_HOST": "'"$PROD_DB_HOST"'",
+                "PROD_DB_USER": "'"$PROD_DB_USER"'",
+                "PROD_DB_PASS": "'"$PROD_DB_PASS"'",
+                "SERVER_PORT": "'"$SERVER_PORT"'",
+                "AWS_REGION": "'"$AWS_REGION"'",
+                "AWS_ACCESS_KEY_ID": "'"$AWS_ACCESS_KEY_ID"'",
+                "AWS_SECRET_ACCESS_KEY": "'"$AWS_SECRET_ACCESS_KEY"'",
+                "RECIPE_IMAGES_BUCKET": "'"$RECIPE_IMAGES_BUCKET"'",
+                "NEXT_PUBLIC_APP_ENV": "production",
+                "APP_ENV": "production"
+              }
+          },
+          "cookbooks-prod-client": {
+            "image": "576765093341.dkr.ecr.us-west-2.amazonaws.com/cookbooks/prod/client",
+            "ports": {
+              "443": "HTTPS",
+              "3000": "HTTP"
+            },
+            "environment": {
+              "AUTH0_SECRET": "'"$AUTH0_SECRET"'",
+              "AUTH0_ISSUER_BASE_URL": "'"$AUTH0_ISSUER_BASE_URL"'",
+              "AUTH0_CLIENT_ID": "'"$AUTH0_CLIENT_ID"'",
+              "AUTH0_CLIENT_SECRET": "'"$AUTH0_CLIENT_SECRET"'",
+              "NEXT_PUBLIC_PROD_PROXY": "'"$NEXT_PUBLIC_PROD_PROXY"'",
+              "AUTH0_BASE_URL": "https://cook-books.io/",
+              "NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK": "'"$NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK"'",
+              "NEXT_PUBLIC_APP_ENV": "production",
+              "APP_ENV": "production"
+            }
+          }
+        }' \
+        --public-endpoint 'containerName=cookbooks-prod-client,containerPort=3000'
+      - sh deploy_status.sh
+    on-failure: ABORT
+  post_build:
+    commands:
       - echo "Deployment successful"
