--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,10 @@ services:
     build: client/
     restart: always
     environment:
-      - NEXT_PUBLIC_PROD_API=${NEXT_PUBLIC_PROD_API}
+      - AUTH0_SECRET=${AUTH0_SECRET}
+      - AUTH0_ISSUER_BASE_URL=${AUTH0_ISSUER_BASE_URL}
+      - AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
+      - AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
       - NEXT_PUBLIC_PROD_PROXY=${NEXT_PUBLIC_PROD_PROXY}
       - AUTH0_BASE_URL=https://cook-books.io/
       - NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK=${NEXT_PUBLIC_RECIPE_IMAGES_BUCKET_LINK}
