--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
+    "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "concurrently": "^8.0.1",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
-    "babel-preset-next": "^1.4.0"
+    "babel-preset-next": "^1.4.0",
+    "react-transition-group": "^4.4.5"
   }
 }
