--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,20 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@types/react-transition-group": "^4.4.6",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "express": "^4.18.2",
+    "gsap": "^3.12.1",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-transition-group": "^4.4.5",
     "sharp": "^0.32.1",
     "styled-components": "^5.3.9",
     "swr": "^2.1.2",
